feat：X5WebViewActivity新增标题栏（默认内置）

--- a/android/src/main/res/values/styles.xml
+++ b/android/src/main/res/values/styles.xml
@@ -15,4 +15,8 @@
 
     </style>
 
+    <style name="themeWebViewActivity" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">#FF4081</item>
+    </style>
+
 </resources>
